unpackaged/main/default/objects/pse__Project_Actuals__c/pse__Project_Actuals__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__ProjectActualsHelp</customHelpPage>
    <description>Represents rolled-up revenues and costs expressed in the project currency for a particular time period, as well as total hours for the parent project. Projects and time periods have a master-detail relationship with project actuals.</description>
    <label>Project Actuals</label>
    <nameField>
        <label>Project Actuals For</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Actuals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>