unpackaged/main/default/objects/pse__Project_Actuals__c/fields/pse__Margin__c.field-meta.xml
<CustomField>
    <fullName>pse__Margin__c</fullName>
    <formula>pse__Billings__c + pse__Pass_Through_Billings__c - pse__Internal_Costs__c - pse__External_Costs__c - pse__Expense_Costs__c - pse__Other_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>