unpackaged/main/default/objects/pse__Project_Actuals__c/fields/pse__Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Project__c</fullName>
    <label>Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Project Actuals</relationshipLabel>
    <relationshipName>Project_Actuals</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>