unpackaged/main/default/objects/pse__Project_Actuals__c/fields/pse__Unscheduled_Backlog__c.field-meta.xml
<CustomField>
    <fullName>pse__Unscheduled_Backlog__c</fullName>
    <label>Unscheduled Backlog</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>