unpackaged/main/default/objects/pse__Project_Actuals__c/validationRules/pse__Project_Actuals_Currency_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__Project_Actuals_Currency_Mismatch</fullName>
    <active>true</active>
    <description>A Project Actuals record must have the same currency as its parent Project.</description>
    <errorConditionFormula>AND
(
OR(ISNEW(),ISCHANGED(CurrencyIsoCode)), 
NOT(TEXT(CurrencyIsoCode) = TEXT(pse__Project__r.CurrencyIsoCode))
)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>A Project Actuals record must have the same currency as its parent Project.</errorMessage>
</ValidationRule>